--- a/rootdir/factory_init.rc
+++ b/rootdir/factory_init.rc
@@ -1,4 +1,5 @@
 import /init.environ.rc
+import init.ssd.rc
 import init.trustonic.rc
 
 on early-init
@@ -14,9 +15,6 @@ on early-init
 
     # Set the security context of /adb_keys if present.
     restorecon /adb_keys
-	
-	mount debugfs debugfs /sys/kernel/debug
-    chmod 0755 /sys/kernel/debug
 
     start ueventd
 
@@ -35,16 +33,17 @@ loglevel 5
     symlink /sys/kernel/debug /d
     
 # Temp Backward compatibility
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/boot /dev/bootimg
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/recovery /dev/recovery
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/secro  /dev/sec_ro
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/kb /dev/kb
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/dkb /dev/dkb
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/seccfg /dev/seccfg
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/proinfo /dev/pro_info
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/nvram /dev/nvram
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/para /dev/misc
-    symlink /dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/logo /dev/logo       
+    symlink /dev/block/platform/mtk-msdc.0/by-name/boot /dev/bootimg 
+    symlink /dev/block/platform/mtk-msdc.0/by-name/recovery /dev/recovery
+    symlink /dev/block/platform/mtk-msdc.0/by-name/secro  /dev/sec_ro
+    symlink /dev/block/platform/mtk-msdc.0/by-name/kb /dev/kb
+    symlink /dev/block/platform/mtk-msdc.0/by-name/dkb /dev/dkb 
+    symlink /dev/block/platform/mtk-msdc.0/by-name/seccfg /dev/seccfg
+    symlink /dev/block/platform/mtk-msdc.0/by-name/proinfo /dev/pro_info 
+    symlink /dev/block/platform/mtk-msdc.0/by-name/nvram /dev/nvram   
+    symlink /dev/block/platform/mtk-msdc.0/by-name/para /dev/misc
+    symlink /dev/block/platform/mtk-msdc.0/by-name/logo /dev/logo 
+       
 
 # Right now vendor lives on the same filesystem as system,
 # but someday that may change.
@@ -66,10 +65,8 @@ loglevel 5
     mkdir /protect_s 0771 system system
     #create mountpoint for persist partition
     mkdir /persist 0771 system system
-	mkdir /nvcfg 0771 system system
-	
 #Create nvdata mount point
-#    mkdir /nvdata 0771 system system
+    mkdir /nvdata 0771 system system
 
     # See storage config details at http://source.android.com/tech/storage/
     mkdir /mnt/shell 0700 shell shell
@@ -88,15 +85,14 @@ loglevel 5
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
 	
-#INTERNAL_START
+	#INTERNAL_START
     #create mountpoint for persist partition
     mkdir /persist 0771 system system
     #create mountpoint for letvfingerprint partition
     mkdir /letvfingerprint 0771 system system
     #Trustonic
     symlink  /letvfingerprint/0000000.authtokcont  /data/app/mcRegistry/0000000.authtokcont
-#INTERNAL_END
-
+	#INTERNAL_END
 
     # Healthd can trigger a full boot from charger mode by signaling this
     # property when the power button is held.
@@ -125,7 +121,28 @@ loglevel 5
 
 on fs
     write /proc/bootprof "INIT:Mount_START"
-    mount_all /fstab.mt6797					
+    mount_all /fstab.mt6797
+		
+    #change partition permissions
+    exec /system/bin/chmod 0640 /dev/block/platform/mtk-msdc.0/by-name/boot
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/boot
+    exec /system/bin/chmod 0640 /dev/block/platform/mtk-msdc.0/by-name/recovery
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/recovery
+    exec /system/bin/chmod 0640 /dev/block/platform/mtk-msdc.0/by-name/secro
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/secro
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/seccfg
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/seccfg
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/proinfo
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/proinfo
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/otp
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/otp
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/nvram
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/nvram
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/para
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/para
+    exec /system/bin/chmod 0660 /dev/block/platform/mtk-msdc.0/by-name/logo
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/logo			
+    exec /system/bin/chown root:system /dev/block/platform/mtk-msdc.0/by-name/para					
     write /proc/bootprof "INIT:Mount_END"
 
 on post-fs
@@ -136,36 +153,7 @@ on post-fs
     # We restorecon /cache in case the cache partition has been reset.
     restorecon_recursive /cache
     
-    # Same reason as /data above
-    chown system cache /cache
-    chmod 0770 /cache
-	
-	# This may have been created by the recovery system with odd permissions
-    chown system cache /cache/recovery
-    chmod 0770 /cache/recovery
-    
-    # make the selinux kernel policy world-readable
-    chmod 0444 /sys/fs/selinux/policy
-
-    # create the lost+found directories, so as to enforce our permissions
-    mkdir /cache/lost+found 0770 root root
-	
-#INTERNAL_START
-
-    mkdir /cache/recovery 0770 system system
-    chown system system /protect_f
-    chmod 0770 /protect_f
-
-    chown system system /protect_s
-    chmod 0770 /protect_s
-#INTERNAL_END
-
-on post-fs-data
-
-#Thermal	
-#	mkdir /data/.tp/ 0775 system system
-
-# We chown/chmod /data again so because mount is run as root + defaults
+    # We chown/chmod /data again so because mount is run as root + defaults
     chown system system /system/data
     chmod 0777 /system/data
     # We chown/chmod /data again so because mount is run as root + defaults
@@ -173,6 +161,46 @@ on post-fs-data
     chmod 0771 /data
     # We restorecon /data in case the userdata partition has been reset.
     restorecon /data
+    
+    # Same reason as /data above
+    chown system cache /cache
+    chmod 0770 /cache
+
+    mkdir /cache/recovery 0770 system system
+    chown system system /protect_f
+    chmod 0770 /protect_f
+
+    chown system system /protect_s
+    chmod 0770 /protect_s
+
+    # This may have been created by the recovery system with odd permissions
+    chown system cache /cache/recovery
+    chmod 0770 /cache/recovery
+
+    #change permissions on vmallocinfo so we can grab it from bugreports
+    chown root log /proc/vmallocinfo
+    chmod 0440 /proc/vmallocinfo
+
+    #change permissions on kmsg & sysrq-trigger so bugreports can grab kthread stacks
+    chown root system /proc/kmsg
+    chmod 0440 /proc/kmsg
+    
+    # make the selinux kernel policy world-readable
+    chmod 0444 /sys/fs/selinux/policy
+
+    # create the lost+found directories, so as to enforce our permissions
+    mkdir /cache/lost+found 0770 root root
+
+on post-fs-data
+
+#SeLinux
+    mkdir /data/ccci_cfg 0770 system radio
+    restorecon /data/ccci_cfg
+    restorecon_recursive /protect_f
+    restorecon_recursive /protect_s
+	
+	chown system system /letvfingerprint
+    chmod 0771 /letvfingerprint
 
    
     # We chown/chmod /data again so because mount is run as root + defaults
@@ -182,26 +210,12 @@ on post-fs-data
 
     chown system system /persist
     chmod 0771 /persist
-	
-	chown system system /letvfingerprint
-    chmod 0771 /letvfingerprint
-	
-	chown system system /nvcfg
-    chmod 0771 /nvcfg
-    restorecon_recursive /nvcfg
-
-
 # create basic filesystem structure
     #mkdir /data/nvram 2770 root system
     # We chown/chmod /nvdata again so because mount is run as root + defaults
     chown root system /nvdata
     chmod 2770 /nvdata
     symlink /nvdata /data/nvram
-	
-	#Create cct mount point
-    mkdir /data/cct
-    chown root system /data/cct
-    chmod 0771 /data/cct
 
     # Set SELinux security contexts on upgrade or policy update.
     restorecon_recursive /nvdata
@@ -219,8 +233,8 @@ on post-fs-data
     mkdir /data/local 0771 shell shell
     mkdir /data/local/tmp 0771 shell shell
     mkdir /data/data 0771 system system
-    #mkdir /data/app-private 0771 system system
-    #mkdir /data/app 0771 system system
+    mkdir /data/app-private 0771 system system
+    mkdir /data/app 0771 system system
     mkdir /data/property 0700 root root
 
     # create the lost+found directories, so as to enforce our permissions
@@ -250,19 +264,19 @@ on post-fs-data
     chown root system /sys/class/misc/md32/md32_mobile_log
     chmod 0660 /sys/class/misc/md32/md32_mobile_log
     write /sys/class/misc/md32/md32_boot 1
+    
+    # dhcp server 
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
 
     # device info interface
     chmod 0440 /dev/devmap
     chown root system /dev/devmap
 
-	#change partition permission
-    exec /system/etc/partition_permission.sh
 
-#SeLinux
-    mkdir /data/ccci_cfg 0770 system radio
-    restorecon /data/ccci_cfg
-    restorecon_recursive /protect_f
-    restorecon_recursive /protect_s
+
+    #change partition permission
+    exec /system/etc/partition_permission.sh
     
 ## Custom pos-fs area (START)
 # Please add custom fs operation below
@@ -273,16 +287,34 @@ on post-fs-data
     chown root diag /sys/module/tpd_debug/parameters/tpd_em_log
     chown root diag /sys/module/tpd_debug/parameters/tpd_em_log_to_fs
 
+    chmod 0777 /dev/pmem_multimedia
+    chmod 0777 /dev/mt6516-isp
+    chmod 0777 /dev/mt6516-IDP
+    chmod 0777 /dev/mt9p012
+    chmod 0777 /dev/mt6516_jpeg
+    chmod 0777 /dev/FM50AF
+
     # RTC
     mkdir /data/misc/rtc 0770 system system
 
     # Modem related device nodes
     mkdir /data/nvram/md  0770 root system
     mkdir /data/nvram/md2 0770 root system
-    mkdir /data/nvram/md3 0770 root system
+	mkdir /data/nvram/md3 0770 root system
     mkdir /data/md3	0770 root system
 
+
+#  Build-in Modified - S
+#    insmod /system/lib/modules/ccci_plat.ko
+#    insmod /system/lib/modules/ccci.ko
+#  Build-in Modified - E
+#   chown ccci ccci /sys/class/BOOT/BOOT/boot/md
     chown radio radio /sys/kernel/ccci/boot
+
+    # M4U
+    #insmod /system/lib/modules/m4u.ko
+    #mknod /dev/M4U_device c 188 0
+    chmod 0444 /dev/M4U_device
     
     #set mlock limit to infinate (for m4u operation)
     setrlimit 8 -1 -1
@@ -293,15 +325,10 @@ on post-fs-data
     chmod 0666 /dev/msensor
     chmod 0666 /dev/gsensor
     chmod 0666 /dev/alsps
-	
-	chown system system /dev/hwmsensor
-    chown system system /dev/msensor
-    chown system system /dev/gsensor
-    chown radio system /dev/als_ps
-    chown system system /dev/gyroscope
 
     #VideoCodec
     chmod 0666 /dev/Vcodec
+
 
     mkdir /data/amit/
 
@@ -322,6 +349,14 @@ on post-fs-data
     # For MD Logger
     chown system radio /dev/ttyGS3
     chmod 0660 /dev/ttyGS3
+
+    #NFC
+    rm /data/mtknfc_server
+
+    # Vanzo:songlixin on: Wed, 10 Jun 2015 15:40:25 +0800
+    # for irda
+    chmod 0660 /dev/remote_ctrl_dev
+    # End of Vanzo:songlixin
 
 ## Custom pos_fs area (END) 
 
@@ -368,9 +403,6 @@ on property:vold.decrypt=trigger_default_encryption
 on property:vold.decrypt=trigger_encryption
     start surfaceflinger
     start encrypt
-	
-on property:sys.init_log_level=*
-    loglevel ${sys.init_log_level}
 
 on property:vold.decrypt=trigger_reset_main
     class_reset main
@@ -496,30 +528,47 @@ service nvram_daemon /system/bin/nvram_daemon
     group system
     oneshot
 
-service mdlogger /system/bin/mdlogger
-    class main
-    user shell
-    group shell system radio sdcard_rw inet
-    disabled
-    oneshot
-
-service dualmdlogger /system/bin/dualmdlogger
-    class main
-    user shell
-    group shell system radio sdcard_rw inet
-    disabled
-    oneshot
-
-
-#service installd /system/bin/installd
+# Vanzo:maxiaojun on: Tue, 13 Jan 2015 16:15:03 +0800
+# ata modification
+#service mdlogger /system/bin/mdlogger
 #    class main
-#    socket installd stream 600 system system
+#    user shell
+#    group shell system radio sdcard_rw inet
+#    disabled
+#    oneshot
+#
+#service dualmdlogger /system/bin/dualmdlogger
+#    class main
+#    user shell
+#    group shell system radio sdcard_rw inet
+#    disabled
+#    oneshot
+# End of Vanzo: maxiaojun
 
-service factory_no_image /system/bin/factory
+service installd /system/bin/installd
+    class main
+    socket installd stream 600 system system
+
+service factory_no_image /system/bin/logwrapper /system/bin/factory
+    disabled
+    oneshot
+
+service factory_with_image /system/bin/logwrapper /sbin/factory
+	disabled
+    oneshot
 
 service mobile_log_d /system/bin/mobile_log_d
 	class main
 
+#service hald /system/bin/hald
+#    class main
+#    socket hald stream 0660 root system
+    
+#service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant
+#    group wifi
+#    disabled
+#    oneshot    
+#
 # Connectivity related services (End)
 #
 #
@@ -531,6 +580,12 @@ service statusd /system/bin/statusd -f [/system/bin/flashlessd -l -m 0]
     socket statusd stream 660 radio radio
     user radio
     group radio cache inet misc system
+
+on property:sys.mtk.no.factoryimage=1
+    start factory_no_image
+
+on property:sys.mtk.no.factoryimage=0
+    start factory_with_image
 
 #mass_storage,adb,acm
 on property:ro.boot.usbconfig=0
